new names and descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This Webapp provides an intuitive UI for Anubis policy-api"
+      content="Management UI for Anubis: https://anubis-pep.readthedocs.io/en/latest/."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Auth management UI</title>
+    <title>Anubis Policy Management UI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
