--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Management UI for Anubis: https://anubis-pep.readthedocs.io/en/latest/."
-    />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="%REACT_APP_TITLE%">
+    <meta name="description"
+      content="%REACT_APP_DESCRIPTION%">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="%REACT_APP_TITLE%">
+    <meta property="og:description"
+      content="%REACT_APP_DESCRIPTION%">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Anubis Policy Management UI</title>
+    <title>%REACT_APP_TITLE%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
